<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rlSearching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/etTableSearchString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_gap"
            android:layout_marginRight="@dimen/default_gap"
            android:layout_toLeftOf="@+id/ivSearchTable"
            android:hint="@string/table_search_hint"
            android:inputType="text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/ivSearchTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_gap"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_search"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvAlbums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flHLine"
        android:layout_below="@+id/rlSearching" />
    
    <FrameLayout
        android:id="@+id/flHLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/vsPageOperation"
        android:background="@color/light_gray" />

    <ViewSwitcher
        android:id="@+id/vsPageOperation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_bar_height"
        android:layout_alignParentBottom="true"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right" >

        <LinearLayout
            android:id="@+id/llPageIndicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvPreviousPage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/previous_page"
                android:background="@drawable/textview_button_selector" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/tvCurrentPageNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/page_number_indicator"
                android:background="@drawable/textview_button_selector"
                android:clickable="true" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/tvNextPage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/next_page"
                android:background="@drawable/textview_button_selector" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />
            
            <TextView
                android:id="@+id/tvMoreOperationsA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/more_operations"
                android:background="@drawable/textview_button_selector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvDecreaseNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/decrease_number"
                android:background="@drawable/textview_button_selector" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />
            
            <TextView
                android:id="@+id/tvNumberValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/index_one"
                android:clickable="true"
                android:background="@drawable/textview_button_selector" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />
            
            <TextView
                android:id="@+id/tvIncreaseNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/increase_number"
                android:background="@drawable/textview_button_selector" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/tvJumpToAPage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/jump_to_a_page"
                android:background="@drawable/textview_button_selector" />
            
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />
            
            <TextView
                android:id="@+id/tvMoreOperationsB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/more_operations"
                android:background="@drawable/textview_button_selector" />

        </LinearLayout>
    </ViewSwitcher>

</RelativeLayout>